--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,21 @@
-.datePicker {
-  justify-content: center;
+.datePickerDiv {
+  text-align: center;
+  border-style: solid;
 }
+
+.datePickerInput {
+}
+
 .nasaDiv {
-  margin: 20;
+  /* margin: 30%, 30% ,30%, 30%; */
+  margin-left: 30%;
+  margin-right: 30%;
+  margin-top: 5%;
+  margin-bottom: 3%;
+  border-radius: 1%;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(225, 225, 225);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,33 +24,35 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
-  /* padding:300px; */
-  padding-inline: 30%;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 
 .nasaExplanation {
-  color: #506ED1;
-  text-align: left;
+  color: #506ed1;
 }
 
 .nasaImage {
   /* border: 1px solid #fff000; */
-  border: 1px solid darkcyan;
-  width: 500px;
-  height: 500px;
-  fill: darkcyan;
+  /* border: 5px solid darkcyan; */
+  border-radius: 2%;
+  /* width: 500px;
+  height: 500px; */
+  width: 100%;
+  /* fill: darkcyan; */
+  text-align: center;
   /* justify-content: center;
    */
 }
 .credit {
-  color: #73B4F1;
+  color: #73b4f1;
   font-style: italic;
 }
 
-.title{
-  color: #3A3C6E;
+.title {
+  color: #3a3c6e;
 }
 
-.date{
-  color: #506ED1;
+.date {
+  color: #506ed1;
 }
