refactor(17/10/22): Readme update

--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,10 @@
   border-style: solid;
 }
 
-.datePickerInput {
-}
+/* .datePickerInput {
+} */
 
 .nasaDiv {
-  /* margin: 30%, 30% ,30%, 30%; */
   margin-left: 30%;
   margin-right: 30%;
   margin-top: 5%;
