--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,12 @@
 
 /* .datePickerInput {
 } */
-
+body {
+  background-color: rgb(250,250,250);
+}
 .nasaDiv {
-  margin-left: 30%;
-  margin-right: 30%;
-  margin-top: 5%;
-  margin-bottom: 3%;
+  background-color: white;
+  margin: 5% 30% 3% 30%;
   border-radius: 1%;
   border-style: solid;
   border-width: 2px;
@@ -23,8 +23,7 @@
   flex-direction: column;
   justify-content: center;
   text-align: left;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding:  0px 30px 0px 30px;
 }
 
 .nasaExplanation {
