--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 .nasaDiv {
   background-color: white;
-  margin: 5% 30% 3% 30%;
+  margin: 5% 10% 3% 10%;
   border-radius: 1%;
   border-style: solid;
   border-width: 2px;
@@ -40,6 +40,11 @@ body {
   text-align: center;
   /* justify-content: center;
    */
+}
+
+.iframeDiv{
+  border-radius: 2%;
+  text-align: center;
 }
 .credit {
   color: #73b4f1;
